# event-modeling-codex

./: AGENTS.md  BACKLOG.md  README.md  event-modeling-codex.cabal
scripts/: install-haskell.sh  test.sh
src/: Main.hs
src/Domain/: Task.hs
src/Infrastructure/: EventStore.hs
test/: Spec.hs
